--- a/ArduinoPWS/year.html.tmpl
+++ b/ArduinoPWS/year.html.tmpl
@@ -132,7 +132,7 @@
                 <div class="card" >
                     <h1><i class="fa fa-cloud m-blau" ></i> Rain This Year (from 1-$station.rain_year_str)</h1>
                     <table class="tablespacer">
-                        <tr><td>Total Rain</td><td>$rainyear.rainDay.sum</td><td></td></tr>
+                        <tr><td>Total Rain</td><td>$rainyear.rainHour.sum</td><td></td></tr>
                         <tr><td>High Rain Rate</td><td>$rainyear.rainHour.max</td><td>$rainyear.rainHour.maxtime</td></tr>
                     </table>
                 </div>
@@ -147,6 +147,7 @@
                     <img src="yeartempdew.png" alt="temperatures" />
                     <img src="yeartempchill.png" alt="heatchill" />
                     <img src="yearhilow.png" alt="Daily highs and lows for the year" title="Daily highs and lows for the year"/>
+                    <img src="yearhumidity.png" alt="humidity" />
                     <img src="yearrain.png" alt="rain" />
                     <img src="yearwind.png" alt="wind" />
                     <img src="yearbarometer.png" alt="barometer"/>
