--- a/ArduinoPWS/week.html.tmpl
+++ b/ArduinoPWS/week.html.tmpl
@@ -101,7 +101,7 @@
                         <tr><td>Low Humidity</td><td>$week.outHumidity.min</td><td>$week.outHumidity.mintime</td></tr>
                         <tr><td>High Barometer</td><td>$week.barometer.max</td><td>$week.barometer.maxtime</td></tr>
                         <tr><td>Low Barometer</td><td>$week.barometer.min</td><td>$week.barometer.mintime</td></tr>
-                        <tr><td>Rain Total</td><td>$week.rainDay.sum</td><td></td></tr>
+                        <tr><td>Rain Total</td><td>$week.rainHour.sum</td><td></td></tr>
                         <tr><td>High Rain Rate</td><td>$week.rainHour.max</td><td>$week.rainHour.maxtime</td></tr>
                         <tr><td>High Wind Speed</td><td>$week.wind.max $week.wind.gustdir</td><td>$week.wind.maxtime</td></tr>
                         <tr><td>Average Wind</td><td>$week.wind.avg</td><td></td></tr>
@@ -144,7 +144,7 @@
                         <tr><td>Low Humidity</td><td>$month.outHumidity.min</td><td>$month.outHumidity.mintime</td></tr>
                         <tr><td>High Barometer</td><td>$month.barometer.max</td><td>$month.barometer.maxtime</td></tr>
                         <tr><td>Low Barometer</td><td>$month.barometer.min</td><td>$month.barometer.mintime</td></tr>
-                        <tr><td>Rain Total</td><td>$month.rainDay.sum</td><td></td></tr>
+                        <tr><td>Rain Total</td><td>$month.rainHour.sum</td><td></td></tr>
                         <tr><td>High Rain Rate</td><td>$month.rainHour.max</td><td>$month.rainHour.maxtime</td></tr>
                         <tr><td>High Wind Speed</td><td>$month.wind.max $month.wind.gustdir</td><td>$month.wind.maxtime</td></tr>
                         <tr><td>Average Wind</td><td>$month.wind.avg</td><td></td></tr>
@@ -183,6 +183,7 @@
                     
                     <img src="weektempdew.png" alt="temperatures" />
                     <img src="weektempchill.png" alt="heatchill" />
+                    <img src="weekhumidity.png" alt="humidity" />
                     <img src="weekrain.png" alt="rain" />
                     <img src="weekwind.png" alt="wind" />
                     <img src="weekbarometer.png" alt="barometer"/>
